// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Firebase connectCategories should return an action to connect categories to the store 1`] = `
Object {
  "payload": Object {},
  "type": "CONNECT_CATEGORIES_REQUEST",
}
`;

exports[`Firebase connectLogos should return an action to connect logos to the store 1`] = `[Function]`;

exports[`Firebase connectTags should return an action to connect tags to the store 1`] = `
Object {
  "payload": Object {},
  "type": "CONNECT_TAGS_REQUEST",
}
`;

exports[`Firebase initFirebase should return an action to connect to firebase 1`] = `
Object {
  "payload": Object {},
  "type": "CONNECT_FIREBASE_REQUEST",
}
`;

exports[`Firebase updateLogos should return an action to update logos to the store 1`] = `
Object {
  "meta": Object {
    "callback": undefined,
    "updated": 123456789,
  },
  "payload": undefined,
  "type": "UPDATE_LOGOS_REQUEST",
}
`;
